[Fix] Alignment of current download component when sidebar is collapsed (#2933)
Fix alignment of current download in collapsed sidebar

--- a/src/frontend/components/UI/Sidebar/index.scss
+++ b/src/frontend/components/UI/Sidebar/index.scss
@@ -147,10 +147,6 @@
   color: var(--accent-overlay);
 }
 
-.currentDownloads .statusIcon {
-  display: none;
-}
-
 .Sidebar.collapsed {
   .heroicVersion {
     margin: var(--space-sm);
@@ -166,6 +162,7 @@
   }
 
   .currentDownloads {
+    margin-inline: auto;
     .statusIcon {
       display: block;
     }
